--- a/index.html
+++ b/index.html
@@ -4,10 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Recomedacion de Peliculas</title>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+
+        h1 {
+            font-size: 24px;
+        }
+
+        .introduction {
+            font-size: 18px;
+            margin-bottom: 20px;
+        }
+
+        .bullets {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+
+        .signature {
+            font-size: 14px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Proyecto de Clara Santillan</h1>
     <h2>PI_ML_OPS</h2>
-    
+    <h3>Este proyecto se basa en posicionarse en el rol de un MLOps Engineer y crear un sistema de recomendación de películas basado en la similitud de contenido. Se toma la información de películas en nuestro archivero de datos, para identificar aquellas películas similares a las que el usuario elige. Complementariamente se debian crear 6 funciones con el fin de obtener informacion relevenate sobre peliculas y directores.</h3>
+</body>
+</html>
+
+    <div class="bullets">
+        <ul>
+            <li>Obtener la cantidad de peliculas estrenadas en un mes especifico.<a href="/cantidad_filmaciones_mes/enero">enero.</a></li>
+            <li>Obtener la cantidad de películas estrenadas en un día específico.<a href="/cantidad_filmaciones_dia/lunes"> lunes.</a></li>
+            <li>Obtener el titulo, el año de estreno y el score de la pelicula introducida.<a href="/score_titulo/ToyStory">Toy Story.</a></li>
+            <li>Obtener el título, la cantidad de votos y el valor promedio de las votaciones de aquellas que cuenten con mas de 2000 valoraciones.<a href="/votos_titulo/GrumpierOldMen">Grumpier Old Men.</a></li>
+            <li>Obtener el exito de un actor medido con el retorno, la cantidad de peliculas en las que participo y el promedio del retorno.<a href="/get_actor/TimAllen">Tim Allen.</a></li>
+            <li>Obtener el éxito de un director medido a través del retorno, el nombre de cada película dirigida con la fecha de lanzamiento, retorno individual, costo y ganancia de la misma.<a href="/get_director/CedricGibbons">Cedric Gibbons.</a></li>
+            <li>Obtén recomendaciones de películas.<a href="/recomendacion/Cars"> Minions.</a></li>
+        </ul>
+    </div>
+    <footer>
+        <p class="signature">Realizado por Clara Santillan</p>
+        <p class="signature"><i class="fi fi-brands-github"></i>GitHub: <a href="https://github.com/Clarisantillan">Clarisantillan</a></p>
+        <p class="signature"><i class="fi fi-brands-linkedin"></i>LinkedIn: <a href="https://www.linkedin.com/in/clara-santillan/">Clara Santillan</a></p>
+    </footer>>
+   
 </body>
 </html>
